--- a/offices/_offices-index.html
+++ b/offices/_offices-index.html
@@ -211,6 +211,7 @@
 
 {% block javascript %}
     {{ super() }}
+    <!-- TODO: Move this to a Browserify module. -->
     <script>
         $('document').ready(function () {
             if (!$('html').hasClass('lt-ie9')) {
