Got rid of extra close tag
Stupid copy-paste and/or not reading my own commit closely.

--- a/govdelivery-subscribe/error/index.html
+++ b/govdelivery-subscribe/error/index.html
@@ -17,7 +17,7 @@
     <ol class="short-desc">
         <li>Keep exploring <a href="http://beta.consumerfinance.gov">beta.consumerfinance.gov</a>.</li>
         <li>Check back often to follow our progress and find new sources of information.</li>
-        <li><a href="/contact-us/"></a>Let us know</a> if there’s a particular line of work you want to hear about regularly.</li>
+        <li><a href="/contact-us/">Let us know</a> if there’s a particular line of work you want to hear about regularly.</li>
     </ol>
     <!-- TODO: Commented out until email signup is ready to use.
     <h1><span class="cf-icon cf-icon-error-round"></span> Please try again.</h1>
