Changed the h1 copy
D'oh! part deux: I overlooked the actual lead copy. "Not just yet" would been kind of a mean way to greet a failed signup because of a technical error.

--- a/govdelivery-subscribe/error/index.html
+++ b/govdelivery-subscribe/error/index.html
@@ -9,10 +9,11 @@
 {%- endblock %}
 
 {% block content_main %}
-    <h1><span class="cf-icon cf-icon-error-round"></span> Not just yet!</h1>
+    <h1><span class="cf-icon cf-icon-error-round"></span> That didn't work.</h1>
     <p class="short-desc">
-        We couldn’t complete your signup request. Try<br>
-        again in a little while. For now:
+        We couldn’t complete your signup request. Try <br>
+        to submit your address again in a little while. For <br>
+        now:
     </p>
     <ol class="short-desc">
         <li>Keep exploring <a href="http://beta.consumerfinance.gov">beta.consumerfinance.gov</a>.</li>
