Refactored email subscribe macro
- Removes query option (no longer needed)
- Moves macro in with other macros
- Removed reveal js hook from form

--- a/events/index.html
+++ b/events/index.html
@@ -88,8 +88,8 @@
                         <p class="short-desc">
                             Subscribe to our email newsletter. We will update you on new event updates.
                         </p>
-                        {% import "email-subscribe-form.html" as subscribe with context %}
-                        {{ subscribe.render(vars.query, 'USCFPB_93') }}
+                        {% from "macros.html" import subscribe as subscribe with context %}
+                        {{ subscribe('USCFPB_93') }}
                     </div>
                     <div>
                         {% import "rss.html" as rss %}
