--- a/events/_single.html
+++ b/events/_single.html
@@ -63,8 +63,8 @@
             <p class="short-desc">
                 Subscribe to our email newsletter. We will update you on new blogs.
             </p>
-            {% import "email-subscribe-form.html" as subscribe with context %}
-            {{ subscribe.render(vars.query) }}
+            {% from "macros.html" import subscribe as subscribe with context %}
+            {{ subscribe('USCFPB_93') }}
         </div>
         <div class="block block__sub">
             {% import "rss.html" as rss %}
