--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -30,12 +30,12 @@
         </p>
         <p>
             Richard Cordray is the Director of the CFPB. Steve Antonakes is the Deputy Director.
-            We post their calendars online, typically on a monthly basis, after reviewing it to determine 
-            whether any information contained therein must or should be withheld from public disclosure 
+            We post their calendars online, typically on a monthly basis, after reviewing it to determine
+            whether any information contained therein must or should be withheld from public disclosure
             in accordance with the Freedom of Information Act. We update the calendar
-            retrospectively for the months they have occupied these leadership roles. We do not post 
-            current or future calendars. Due to the time-intensive preparation process, each 
-            month’s calendar will appear on this page a few weeks after that month has concluded. We 
+            retrospectively for the months they have occupied these leadership roles. We do not post
+            current or future calendars. Due to the time-intensive preparation process, each
+            month’s calendar will appear on this page a few weeks after that month has concluded. We
             have also retained the calendars of people who have previously lead the day-to-day work of the CFPB.
         </p>
         {{ share(self.title(), false) }}
@@ -50,7 +50,9 @@
 
         {{ filters(
             ['calendar', 'range_date'], query, posts, 'calendar_event',
-            { 'expand_label': 'Filter calendars' }
+            {
+                'expand_label': 'Filter calendars'
+            }
         ) }}
 
     {{ calendar.render(posts) }}
@@ -64,8 +66,8 @@
             Download a copy
         </h1>
         <p>
-            Choose the names and dates for which you want to see the calendar. Appointments are 
-            only available for months when someone was serving in Bureau leadership. We'll 
+            Choose the names and dates for which you want to see the calendar. Appointments are
+            only available for months when someone was serving in Bureau leadership. We'll
             generate a PDF of the results for you. Very large requests may take a while.
         </p>
         {{ filters(
@@ -76,10 +78,7 @@
                 'show_current_filters': false,
                 'action'              : 'pdf/',
                 'submit_label'        : 'Download PDF',
-                'additional_classes'  : 'js-validate_form-not-empty',
-                'alert'               : {
-                                            'text': 'Please enter filter critera'    
-                                        }
+                'additional_classes'  : 'js-validate_form-not-empty'
             }
         ) }}
     </section>
