--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -14,6 +14,41 @@
     <link rel="stylesheet" href="/static/vendor/slick-carousel/slick.css">
 {%- endblock %}
 
+{% block hero -%}
+    <section class="content_hero hero hero__bureau">
+        {% from "macros.html" import YouTube %}
+        {% call YouTube({
+            'video_id' : 'en0Iq8II4fA',
+            'image_res' : 'max'
+            })
+        %}
+        <div class="hero_wrapper hide-on_yt-playing">
+            <div class="hero_card hero_card__bureau">
+                <article class="hero_preview">
+                    <div class="summary">
+                        <header class="summary_header">
+                            <h1 class="summary_heading">We are the CFPB</h1>
+                        </header>
+                        <p class="summary_text">
+                            We are a government agency created after the 2008 financial crisis.
+                            We protect American consumers.  Allow us to introduce ourselves.
+                        </p>
+                        <footer class="summary_footer">
+                            <a class="jump-link jump-link__right" href="/history/">
+                                <span class="icon-link_text">See the history of the CFPB</span>
+                            </a>
+                            <a class="jump-link jump-link__right" href="/the-bureau/about-rich-cordray/">
+                                <span class="icon-link_text">Meet Director Richard Cordray</span>
+                            </a>
+                        </footer>
+                    </div>
+                </article>
+            </div>
+        </div>
+        {% endcall %}
+    </section>
+{%- endblock %}
+
 {% block content_main_modifiers -%}
     {{ super() }} content__flush-bottom
 {%- endblock %}
