--- a/govdelivery-subscribe/error/index.html
+++ b/govdelivery-subscribe/error/index.html
@@ -9,7 +9,7 @@
 {%- endblock %}
 
 {% block content_main %}
-    <h1><span class="cf-icon cf-icon-error-round"></span> That didn't work.</h1>
+    <h1><span class="cf-icon cf-icon-error-round"></span> That didn’t work.</h1>
     <p class="short-desc">
         We couldn’t complete your signup request. Try <br>
         to submit your address again in a little while. For <br>
