--- a/the-bureau/bureau-structure/index.html
+++ b/the-bureau/bureau-structure/index.html
@@ -12,7 +12,14 @@
 
 {% block css -%}
     {{ super() }}
-    <link rel="stylesheet" href="/static/vendor/slick-carousel/slick.css">
+    {# TODO: Resolve slick font issue.
+             For the slick stylesheet to pick up its font and img reference the
+             fonts and images found at /src/vendor/slick-carousel/slick/ should
+             be included in same directory as slick.css.
+             However, including the slick fonts makes the dots on the
+             /the-bureau/ page at mobile sizes enormous.
+    #}
+    <link rel="stylesheet" href="/static/css/slick.css">
 {%- endblock %}
 
 {% block content_main %}
