--- a/offices/_single.html
+++ b/offices/_single.html
@@ -175,7 +175,7 @@
             </h1>
             {{ activities_feed }}
             <!-- link to activities page? -->
-            <a class="jump-link jump-link__right" href="/activity-log">
+            <a class="jump-link jump-link__right" href="/activity-log/">
                 View all of our activity
             </a>
         </section>
