--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -67,7 +67,7 @@
         </h1>
         <p>
             Choose the names and dates for which you want to see the calendar. Appointments are
-            only available for months when someone was serving in Bureau leadership. We'll
+            only available for months when someone was serving in Bureau leadership. We’ll
             generate a PDF of the results for you. Very large requests may take a while.
         </p>
         {{ filters(
