--- a/initiatives/submit-a-request/index.html
+++ b/initiatives/submit-a-request/index.html
@@ -5,6 +5,10 @@
 {% import "_vars-initiatives.html" as vars with context %}
 {% set active_nav_id = initiative.slug %}
 
+{% set activity_type = "FOIA" %}
+{% from "post-macros.html" import activity_snippets as activity_snippets with context %}
+{% set activities_feed = activity_snippets(activity_type) %}
+
 {% block title -%}
     {{ initiative.title | safe if initiative.title }}
 {%- endblock %}
@@ -25,18 +29,63 @@
     </section>
     {% endif %}
 
-    <!-- Start Custom Module. -->
+    <!-- Three Steps Start -->
+    <section class="block
+                    block__bg
+                    block__border
+                    block__flush-sides
+                    block__business-step_container">
+        <div class="content-l content-l__main">
+            <div class="content-l_col
+                        content-l_col-1-3
+                        block
+                        block__padded-bottom
+                        block__border-bottom
+                        block__flush-top
+                        block__business-step">
+                <h2 class="h4">
+                    <span class="step-slug char-icon char-icon__1 u-mb15">Step one</span>
+                    Fill out the form
+                </h2>
+                <img src="http://placekitten.com/g/150/150">
+            </div>
+
+            <div class="content-l_col
+                        content-l_col-1-3
+                        block
+                        block__border-bottom
+                        block__business-step
+                        block__padded-bottom">
+                <h2 class="h4">
+                    <span class="step-slug char-icon char-icon__2 u-mb15">Step two</span>
+                    Generate the PDF
+                </h2>
+                <img src="http://placekitten.com/g/150/150">
+            </div>
+
+            <div class="content-l_col content-l_col-1-3">
+                <h2 class="h4">
+                    <span class="step-slug char-icon char-icon__3 u-mb15">Step three</span>
+                    Mail, fax or email PDF
+                </h2>
+                <img src="http://placekitten.com/g/150/150">
+            </div>
+        </div>
+    </section>
+    <!-- Three Steps End -->
+
+    <!-- Start Form Module. -->
     <section class="block">
-        <p class="h4">Enter your information to auto-generate a FOIA request letter</p>
+        <h2>Enter your information to auto-generate a FOIA request letter</h2>
         <form>
             <div class="form-l">
 
-                <label class="form-label-header form-l_col form-l_col-1-3" for="foia-request_first-name">
+                <label class="form-label form-label__right form-l_col form-l_col-1-3" for="foia-request_first-name">
                     First Name
                 </label>
-                <div class="form-l_col form-l_col-2-3">
+                <div class="form-l_col form-l_col-2-3 input__long">
                     <input type="text"
-                           class="form-group_item input__long"
+                           class="form-group_item"
                            placeholder="Requestor's First Name"
                            id="foia-request_first-name">
                     </input>
@@ -44,44 +93,45 @@
 
 
 
-                <label class="form-label-header form-l_col form-l_col-1-3" for="foia-request_last-name">
+                <label class="form-label form-label__right form-l_col form-l_col-1-3" for="foia-request_last-name">
                     Last Name
                 </label>
-                <div class="form-l_col form-l_col-2-3">
+                <div class="form-l_col form-l_col-2-3 input__long">
                     <input type="text"
-                           class="input__long"
                            placeholder="Requestor's Last Name"
                            id="foia-request_last-name">
                     </input>
                 </div>
 
-                <label class="form-label-header form-l_col form-l_col-1-3" for="foia-request_request-desc">
+                <label class="form-label form-label__right form-l_col form-l_col-1-3" for="foia-request_request-desc">
                     Request description
-                    <div class="short-description">
+                    <div class="micro-copy micro-copy__large">
                         Identify documents information as specifically as possible
                     </div>
                 </label>
-                <div class="form-l_col form-l_col-2-3">
-                    <textarea
-                           class="input__long"
-                           id="foia-request_request-desc">
+                <div class="form-l_col form-l_col-2-3 input__long">
+                    <textarea id="foia-request_request-desc">
                     </textarea>
                 </div>
 
-                <label class="form-label-header form-l_col form-l_col-1-3" for="foia-request_request-fee">
+                <label class="form-label form-label__right form-l_col form-l_col-1-3" for="foia-request_request-fee">
                     Request Fee
                 </label>
-                <div class="form-l_col form-l_col-2-3">
-                    <select class="custom-select custom-select_select"
-                            data-placeholder="Select the FOIA request category"
-                            id="foia-request_request-fee">
-                        <option value="Commercial">Commercial</option>
-                        <option value="Media">Media</option>
-                        <option value="Others">Others</option>
-                    </select>
+                <div class="form-l_col form-l_col-2-3 input__long">
+                    <div class="custom-select">
+                        <select class="custom-select_select"
+                                data-placeholder="Select the FOIA request category"
+                                id="foia-request_request-fee">
+                            <option value="">Select the FOIA request category</option>
+                            <option value="Commercial">Commercial</option>
+                            <option value="Media">Media</option>
+                            <option value="Others">Others</option>
+                        </select>
+                        <span class="custom-select_icon cf-icon cf-icon-down"></span>
+                    </div>
                 </div>
 
-                <label class="form-label-header
+                <label class="form-label form-label__right
                               form-l_col
                               form-l_col-1-3"
                        for="foia-request_request-fee-waiver">
@@ -90,17 +140,17 @@
                 <div class="form-l_col form-l_col-2-3">
                     <fieldset class="u-b0">
                         <label class="form-l_col-1-2">
-                            <input type="radio">
+                            <input type="radio" name="request-fee-waiver_button">
                             No
                         </label>
                         <label class="form-l_col-1-2">
-                            <input type="radio">
+                            <input type="radio" name="request-fee-waiver_button">
                             Yes
                         </label>
                     </fieldset>
                 </div>
 
-                <label class="form-label-header
+                <label class="form-label form-label__right
                               form-l_col
                               form-l_col-1-3"
                        for="foia-request_expedite">
@@ -109,17 +159,17 @@
                 <div class="form-l_col form-l_col-2-3">
                     <fieldset class="u-b0">
                         <label class="form-l_col-1-2">
-                            <input type="radio">
+                            <input type="radio" name="expedite_button">
                             No
                         </label>
                         <label class="form-l_col-1-2">
-                            <input type="radio">
+                            <input type="radio" name="expedite_button">
                             Yes
                         </label>
                     </fieldset>
                 </div>
 
-                <label class="form-label-header
+                <label class="form-label form-label__right
                               form-l_col
                               form-l_col-1-3"
                        for="foia-request_response-method">
@@ -128,15 +178,15 @@
                 <div class="form-l_col form-l_col-2-3">
                     <fieldset class="u-b0">
                         <label class="form-l_col-1-3">
-                            <input type="radio">
+                            <input type="radio" name="response-method_button">
                             Email
                         </label>
                         <label class="form-l_col-1-3">
-                            <input type="radio">
+                            <input type="radio" name="response-method_button">
                             Mail
                         </label>
                         <label class="form-l_col-1-3">
-                            <input type="radio">
+                            <input type="radio" name="response-method_button">
                             Fax
                         </label>
                     </fieldset>
@@ -146,16 +196,78 @@
 
                 <div class="form-actions form-actions__right-on-med ">
                     <input class="btn form-actions_item" type="submit" value="Generate FOIA PDF"></input>
-                    <a href="#" class="pdf form-actions_item">Sample Letter</a>
+                    <a href="#" class="btn btn__link form-actions_item">
+                        Sample Letter
+                        <span class="cf-icon cf-icon-pdf"></span>
+                    </a>
                 </div>
 
             </div>
         </form>
-        <div class="block">
-            <p>You may send your request by email or mail at the following address:</p>
-            <p>More information about how to submit a request, consult with FOIA and Privacy Act request guidebook</p>
-        </div>
     </section>
-    <!-- End Custom Module. -->
+    <!-- End Form Module. -->
+    <section class="block">
+        <p class="short-desc">You may send your request by email or mail at the following address:</p>
+        <div class="content-l content-l__main">
+            <div class="content-l_col
+                        content-l_col-1-3
+                        block
+                        block__flush-top">
+                <h5>
+                    <span class="cf-icon cf-icon-email"></span>
+                    Email
+                </h5>
+
+                <p class="short-desc">
+                    <a href="mailto:FOIA@cfpb.gov">FOIA@cfpb.gov</a>
+                </p>
+            </div>
+            <div class="content-l_col
+                        content-l_col-1-3
+                        block
+                        block__flush-top">
+                <h5>
+                    <span class="cf-icon cf-icon-mail"></span>
+                    Mail
+                </h5>
+                <p class="short-desc">
+                    Consumer Financial Protection Bureau<br/>
+                    Attention: Chief FOIA Officer<br/>
+                    1700 G Street, NW Washington, DC 20552
+                </p>
+            </div>
+            <div class="content-l_col
+                        content-l_col-1-3
+                        block
+                        block__flush-top">
+                <h5>
+                    <span class="cf-icon cf-icon-fax"></span>
+                    Fax
+                </h5>
+                <p class="short-desc">
+                    (855) 237-2392
+                </p>
+            </div>
+        </div>
+        <p class="short-desc">
+            For more information about how to submit a request, consult with <a href="#" class="icon-link icon-link__pdf">FOIA and Privacy Act request guidebook.</a>
+        </p>
+    </section>
+    {% if activities_feed %}
+    <aside class="block block__flush-sides block__bg u-mb0 u-mt0">
+        <section class="office_activities">
+            <h1 class="header-slug">
+                <span class="header-slug_inner">
+                    Latest Office Activities
+                </span>
+            </h1>
+            {{ activities_feed }}
+            <!-- link to activities page? -->
+            <a class="jump-link jump-link__right" href="/activity-log/">
+                View all of our activity
+            </a>
+        </section>
+    </aside>
+    {% endif %}
 
 {% endblock %}
