--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -2,7 +2,7 @@
 
 <div class="type-and-filter">
 
-    <div class="u-js-only">
+    <form class="js-type-and-filter_form u-js-only">
         <p class="h2">
             Looking for something more specific?
         </p>
@@ -14,14 +14,14 @@
 
         <div class="input-with-btn">
             <div class="input-with-btn_input btn-inside-input">
-                <input class="js-type-and-filter_input input__super" type="text" placeholder="Filter contacts by keyword">
-                <button class="js-type-and-filter_clear btn btn__super btn__link btn__secondary">
+                <input class="js-type-and-filter_input input__super" type="text" placeholder="Filter contacts by keyword" required>
+                <button class="js-type-and-filter_clear btn btn__super btn__link btn__secondary" type="reset">
                     Clear
                     <span class="cf-icon cf-icon-delete"></span>
                 </button>
             </div>
             <div class="input-with-btn_btn">
-                <button class="js-type-and-filter_button btn btn__super">Filter</button>
+                <button class="js-type-and-filter_button btn btn__super" type="submit">Filter</button>
             </div>
         </div>
 
@@ -43,13 +43,7 @@
             </ul>
         </div>
 
-        <p class="type-and-filter_message js-type-and-filter_message"></p>
-
-        <button class="btn btn__super btn__secondary btn__full u-js-only contact-list_btn"
-                id="contact-list_btn">
-            Show all contacts
-        </button>
-    </div>
+    </form>
 
     <div class="block u-mt0 expandable-group contact-list"
          data-accordion="true"
